# wave

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  INDEX_FLATTENING.md  README.md  add_shared_memory_barriers.rst  asm_asm.s  asm_disasm.s  attention-benchmark-vs-triton.py  comparison_report.txt  cool.rpd  debug.txt  debug_water_import.py  duration.py  functional_test_attention.py  gemm_test.py  gen-pytorch-rocm-requirements.py  llvm_asm.s  llvm_disasm.s  mytest.py  mytest2.py  new_file.txt  process_rpd.py  pyproject.toml  requirements-iree-pinned.txt  requirements.txt  scaled_mma_mxfp4_water_e2e_water_lowered.mlir  scaled_mma_mxfp4_water_e2e_wave_lowered.mlir  setup.py  test.py  test.txt  version.json  wave-attention-benchmark.py  whitelizard.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_and_release.yml  build_packages.yml  ci-ffm.yaml  ci-gfx1250.yml  ci-gpu-35x.yaml  ci-gpu-8gpu-distributed.yaml  ci-gpu-rdna.yaml  ci-gpu.yaml  ci-happy.yml  ci-tk.yaml  ci-water.yml  ci-waveasm-mi2xx.yaml  ci.yaml  perf.yaml  pre-commit.yaml  pypi-publish.yml  setup-happy.sh  test_build_release.yml  update_iree_requirement_pins.yml  update_llvm_sha.yml
benchmarks/: bench-layernorm.py  bench.py
benchmarks/results/: results.html  rmsnorm-performance-without-residual.csv
build_tools/: build_linux_package.sh  wave-dev-setup.sh
conductor/: README.md  SCHEDULING_GUIDE.md  __init__.py  conductor.py  extract_ir.py  llm.py  tools.py
conductor/providers/: __init__.py  cursor_agent.py  openrouter.py
docs/: README.md  index.rst  ir_design.rst  sympy-to-ixsimpl-migration.md
docs/infra/: publishing.md
docs/wave/: LDS_swizzling.rst  add_shared_memory_barriers.rst  asm_backend.rst  canonical_ir_format.md  conv.rst  cross-class-spilling.md  debugging.rst  getting_started.rst  ir_design_notes.rst  register_allocation.rst  runtime.rst  shared_memory.rst  shared_memory_barriers.rst  wave.rst  wave_schedule.rst
examples/jupyter/: tensor_addition.ipynb
examples/python/: 0a_global_mem_buffer_copy.py  0b_shared_mem_buffer_copy.py  0c_transpose_kernel.py  5_gemm.py  6.2_schedule.py  6.3_schedule.py  6_schedule.py  7.1_schedule.py  7.2_mxfp4_gemm_preshuffle_scale.py  7.3_mxfp4_gemm_preshuffle_B.py  mxfp4-quick-bench.py  mxfp4_scale_preshuffle_visualize.py  utils.py  validate_71.py
iree_dump_water_e2e_kernel/: module_scaled_gemm_rocm_hsaco_fb.hsaco  water.asm
iree_dump_wave_kernel/: module_scaled_gemm_rocm_hsaco_fb.hsaco  wave.asm
lit_tests/: lit.cfg.py
mytests/: README.md  functional_test.py  gemm_small_tile_rdna4_test.py
patches/: diff.patch  setup.sh  simulator.patch
tests/: conftest.py
tests/kernel/: asm_backend_test.py  dynamic_strides_test.py  fake_dequant_mxfp6.py  test_vector_shape_override.py  wave_dynamic_mxfp4_quant_test.py  wave_gemm_mxfp_test.py  wave_gemm_test.py  wave_utils_test.py
tests/mlir_wave_iface/: attr_type_converter_test.py  mlir_to_wave_test.py
tests/unittests/: assumptions_test.py  group_same_denom_fractions_test.py  index_mapping_simplify_test.py  iv_stride_test.py  simplify_floordiv_test.py  symbol_utils_test.py  test_annotate_iv_strides.py  test_barrier_strategies.py  test_graph_utils.py  test_numeric_probing.py  test_utils.py  ticketing_test.py
tmp_files/mxfp4_wave8_preshuffleB_schedule/: module_gemm_rocm_hsaco_fb.rocmasm  temp.mlir
trace_256x256x232_64x32x64_mfma_16x16x32_triplebuffer2/: stats_ui_output_agent_32617_dispatch_3.csv
trace_256x256x232_64x32x64_mfma_16x16x32_triplebuffer2/smci350-zts-gtu-b20-05/: 3785403_32617_shader_engine_0_3.att  3785403_32617_shader_engine_10_3.att  3785403_32617_shader_engine_11_3.att  3785403_32617_shader_engine_12_3.att  3785403_32617_shader_engine_13_3.att  3785403_32617_shader_engine_14_3.att  3785403_32617_shader_engine_15_3.att  3785403_32617_shader_engine_16_3.att  3785403_32617_shader_engine_17_3.att  3785403_32617_shader_engine_18_3.att  3785403_32617_shader_engine_19_3.att  3785403_32617_shader_engine_1_3.att  3785403_32617_shader_engine_20_3.att  3785403_32617_shader_engine_21_3.att  3785403_32617_shader_engine_22_3.att  3785403_32617_shader_engine_23_3.att  3785403_32617_shader_engine_24_3.att  3785403_32617_shader_engine_25_3.att  3785403_32617_shader_engine_26_3.att  3785403_32617_shader_engine_27_3.att  3785403_32617_shader_engine_28_3.att  3785403_32617_shader_engine_29_3.att  3785403_32617_shader_engine_2_3.att  3785403_32617_shader_engine_30_3.att  3785403_32617_shader_engine_31_3.att  3785403_32617_shader_engine_3_3.att  3785403_32617_shader_engine_4_3.att  3785403_32617_shader_engine_5_3.att  3785403_32617_shader_engine_6_3.att  3785403_32617_shader_engine_7_3.att  3785403_32617_shader_engine_8_3.att  3785403_32617_shader_engine_9_3.att  3785403_agent_info.csv  3785403_domain_stats.csv  3785403_gfx950_code_object_id_1.out  3785403_gfx950_code_object_id_10.out  3785403_gfx950_code_object_id_11.out  3785403_gfx950_code_object_id_12.out  3785403_gfx950_code_object_id_13.out  3785403_gfx950_code_object_id_14.out  (+10 more)
trace_256x256x232_64x32x64_mfma_16x16x32_triplebuffer2/ui_output_agent_32617_dispatch_3/: code.json  filenames.json  occupancy.json  se0_perfcounter.json  se0_sm0_sl0_wv0.json  se0_sm0_sl1_wv0.json  se0_sm1_sl0_wv0.json  se0_sm1_sl1_wv0.json  se0_sm2_sl0_wv0.json  se0_sm2_sl1_wv0.json  se0_sm3_sl0_wv0.json  se0_sm3_sl1_wv0.json  se10_perfcounter.json  se11_perfcounter.json  se12_perfcounter.json  se13_perfcounter.json  se14_perfcounter.json  se15_perfcounter.json  (+37 more)
water/: AGENTS.md  CMakeLists.txt  llvm-sha.txt
wave_lang/kernel/wave/asm/wave_asm/tools/waveasm-conductor/: CMakeLists.txt  waveasm-conductor.cpp
wave_lang/kernel/wave/execution_engine/: CMakeLists.txt  __init__.py  bindings.cpp  buffer_utils.cpp  buffer_utils.h  execution_engine.cpp  execution_engine.h  execution_engine.py  wave_execution_engine.lds  wave_hip_runtime.cpp  wave_hip_runtime.h
waveasm/: AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  waveasm_e2e.py
waveasm/tools/: CMakeLists.txt
waveasm/tools/waveasm-translate/: CMakeLists.txt  waveasm-translate.cpp
(+754 files in other folders)
